# cuda-flash-attention-

./: .gitignore  CMakeLists.txt  README.md  fa_benchmark.sh  run_tests.sh
FlashAttention/: CMakeLists.txt
FlashAttention/src/: dataset_generator.cpp  fa_cpu.cpp  fa_cpu.hpp  fa_gpu.cu  fa_gpu.cuh  main_benchmark.cpp  main_test.cpp  naive_attention.cu
